--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^18.2.0",
     "axios": "^1.6.0",
     "@stripe/react-stripe-js": "^2.2.0",
-        "@stripe/stripe-js": "^2.0.0",
-    "lucide-react": "^0.539.0",2.2.0"
+    "@stripe/stripe-js": "^22.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
