chore: run build workflow on push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,7 @@
 name: Build Frontend and Commit Dist
 
-on:
-  push:
-    paths:
-      - 'frontend/**'
-      - '!frontend/dist/**'
+on: push
+
 jobs:
   build:
     runs-on: ubuntu-latest
